--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@supersede/eslint-config": "^1.3.0",
 		"@supersede/prettier-config": "^1.0.1",
 		"@tauri-apps/cli": "^1.0.0-rc.8",
+		"@types/node": "^17.0.23",
 		"eslint": "^8.12.0",
 		"prettier": "^2.6.1",
 		"typescript": "^4.6.3",
