--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"prettier": "@supersede/prettier-config",
 	"dependencies": {
 		"@tauri-apps/api": "^1.0.0-rc.3",
+		"iconoir": "^1.0.0",
 		"solid-app-router": "^0.3.2",
 		"solid-js": "^1.3.13"
 	},
@@ -28,6 +29,7 @@
 		"typescript": "^4.6.3",
 		"vite": "^2.8.6",
 		"vite-plugin-solid": "^2.2.6",
+		"vite-plugin-solid-svg": "^0.2.0",
 		"vite-plugin-windicss": "^1.8.3"
 	}
 }
