feat: use custom vite svg loader plugin to support loading from node_modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
+		"lib": [
+			"DOM",
+			"ESNext"
+		],
 		"module": "ESNext",
 		"moduleResolution": "node",
 		"noEmit": true,
@@ -15,8 +19,5 @@
 			]
 		},
 		"target": "ESNext",
-		"types": [
-			"vite/client"
-		],
 	}
 }
