--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
 		"solid-js": "^1.3.13"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.17.8",
 		"@supersede/eslint-config": "^1.3.0",
 		"@supersede/prettier-config": "^1.0.1",
 		"@tauri-apps/cli": "^1.0.0-rc.8",
 		"@types/node": "^17.0.23",
 		"eslint": "^8.12.0",
 		"prettier": "^2.6.1",
+		"svg-parser": "^2.0.4",
 		"typescript": "^4.6.3",
 		"vite": "^2.8.6",
 		"vite-plugin-solid": "^2.2.6",
-		"vite-plugin-solid-svg": "^0.2.0",
 		"vite-plugin-windicss": "^1.8.3"
 	}
 }
