--- a/package.json
+++ b/package.json
@@ -10,7 +10,17 @@
 	},
 	"license": "(MIT OR Apache-2.0)",
 	"eslintConfig": {
-		"extends": "@supersede"
+		"extends": "@supersede",
+		"rules": {
+			"max-len": [
+				"error",
+				{
+					"code": 100,
+					"tabWidth": 2,
+					"ignorePattern": "class='.+"
+				}
+			]
+		}
 	},
 	"prettier": "@supersede/prettier-config",
 	"dependencies": {
@@ -31,6 +41,7 @@
 		"typescript": "^4.6.3",
 		"vite": "^2.8.6",
 		"vite-plugin-solid": "^2.2.6",
-		"vite-plugin-windicss": "^1.8.3"
+		"vite-plugin-windicss": "^1.8.3",
+		"windicss": "^3.5.1"
 	}
 }
