--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.0.0-rc.5", features = [] }
 
 [dependencies]
 directories = "4.0.1"
+futures = "0.3.21"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 sqlx = { version = "0.5.11", features = [
