--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"prettier": "@supersede/prettier-config",
 	"dependencies": {
 		"@tauri-apps/api": "^1.0.0-rc.3",
+		"fuse.js": "^6.5.3",
 		"iconoir": "^1.0.0",
 		"solid-app-router": "^0.3.2",
 		"solid-js": "^1.3.13"
