--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ tauri-plugin-window-state = { git = "https://github.com/tauri-apps/tauri-plugin-
 tokio = { version = "1.17.0", features = ["full"] }
 tracing = "0.1.32"
 tracing-subscriber = "0.3.10"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
 
 [features]
 # by default Tauri runs in production mode
