--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"fuse.js": "^6.5.3",
 		"iconoir": "^1.0.0",
 		"solid-app-router": "^0.3.2",
-		"solid-js": "^1.3.13"
+		"solid-js": "^1.3.13",
+		"solid-styled-components": "^0.27.6"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.8",
