--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
 	"eslintConfig": {
 		"extends": "@supersede",
 		"rules": {
+			"@typescript-eslint/consistent-type-imports": [
+				"error",
+				{
+					"prefer": "type-imports"
+				}
+			],
 			"@typescript-eslint/no-unused-vars": [
 				"warn"
 			],
@@ -32,17 +38,17 @@
 		"fuse.js": "^6.5.3",
 		"iconoir": "^1.0.0",
 		"solid-app-router": "^0.3.2",
-		"solid-js": "^1.3.13",
+		"solid-js": "^1.3.14",
 		"solid-styled-components": "^0.27.6"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.17.8",
+		"@babel/core": "^7.17.9",
 		"@supersede/eslint-config": "^1.3.0",
 		"@supersede/prettier-config": "^1.0.1",
 		"@tauri-apps/cli": "^1.0.0-rc.8",
 		"@types/node": "^17.0.23",
-		"eslint": "^8.12.0",
-		"prettier": "^2.6.1",
+		"eslint": "^8.13.0",
+		"prettier": "^2.6.2",
 		"svg-parser": "^2.0.4",
 		"typescript": "^4.6.3",
 		"vite": "^2.8.6",
