--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 				{
 					"code": 100,
 					"tabWidth": 2,
-					"ignorePattern": "class='.+"
+					"ignorePattern": "class=('|\\{`).+"
 				}
 			],
 			"no-unused-vars": "off"
