--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,7 +30,7 @@ sqlx = { version = "0.5.11", features = [
 ] }
 tauri = { version = "1.0.0-rc.6", features = ["api-all"] }
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/tauri-plugin-window-state", branch = "dev" }
-time = { version = "0.3.9", features = ["serde"] }
+time = { version = "0.3.9", features = ["serde", "parsing", "macros"] }
 tokio = { version = "1.17.0", features = ["full"] }
 tracing = "0.1.32"
 tracing-subscriber = "0.3.10"
