fix: checkboxes stay fixed and properly handle horizontal overflow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,8 @@
 		"strictNullChecks": true,
 		"strictPropertyInitialization": true,
 		"target": "ESNext",
-	}
+	},
+	"exclude": [
+		"dist"
+	]
 }
