feat: add scrollbar styling and fix overflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
 		"editor.wordBasedSuggestions": false,
 		"editor.quickSuggestionsDelay": 100,
 	},
+	"css.customData": [
+		".vscode/css-metadata.json"
+	],
 	"eslint.packageManager": "yarn",
 	"eslint.validate": [
 		"javascript",
