--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	"license": "(MIT OR Apache-2.0)",
 	"dependencies": {
 		"@tauri-apps/api": "^1.0.0-rc.3",
+		"csstype": "^3.0.11",
 		"fuse.js": "^6.5.3",
-		"iconoir": "^1.0.0",
+		"goober": "^2.1.8",
+		"iconoir": "^4.9.1",
 		"solid-app-router": "^0.3.2",
-		"solid-js": "^1.3.15",
+		"solid-js": "^1.3.16",
 		"solid-styled-components": "^0.27.6"
 	},
 	"devDependencies": {
@@ -22,8 +24,8 @@
 		"@supersede/eslint-config": "^1.3.0",
 		"@supersede/prettier-config": "^1.0.1",
 		"@tauri-apps/cli": "^1.0.0-rc.8",
-		"@types/node": "^17.0.24",
-		"eslint": "^8.13.0",
+		"@types/node": "^17.0.25",
+		"eslint": "^8.14.0",
 		"prettier": "^2.6.2",
 		"svg-parser": "^2.0.4",
 		"typescript": "^4.6.3",
