--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
 	},
 	"license": "(MIT OR Apache-2.0)",
 	"dependencies": {
-		"@tauri-apps/api": "^1.0.0-rc.4",
-		"csstype": "^3.0.11",
-		"fuse.js": "^6.5.3",
-		"goober": "^2.1.9",
-		"iconoir": "^4.9.1",
-		"solid-app-router": "^0.3.2",
-		"solid-js": "^1.3.17",
-		"solid-styled-components": "^0.27.6"
+		"@tauri-apps/api": "^1.0.2",
+		"csstype": "^3.1.0",
+		"fuse.js": "^6.6.2",
+		"goober": "^2.1.10",
+		"iconoir": "^5.1.4",
+		"solid-app-router": "^0.4.2",
+		"solid-js": "^1.4.8",
+		"solid-styled-components": "^0.28.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.17.10",
+		"@babel/core": "^7.18.10",
 		"@supersede/eslint-config": "^1.3.0",
 		"@supersede/prettier-config": "^1.0.1",
-		"@tauri-apps/cli": "^1.0.0-rc.9",
-		"@types/node": "^17.0.30",
-		"eslint": "^8.14.0",
-		"prettier": "^2.6.2",
+		"@tauri-apps/cli": "^1.0.5",
+		"@types/node": "^18.7.7",
+		"eslint": "^8.22.0",
+		"prettier": "^2.7.1",
 		"svg-parser": "^2.0.4",
-		"typescript": "^4.6.4",
-		"vite": "^2.9.6",
-		"vite-plugin-solid": "^2.2.6",
-		"vite-plugin-windicss": "^1.8.4",
-		"windicss": "^3.5.1"
+		"typescript": "^4.7.4",
+		"vite": "^3.0.9",
+		"vite-plugin-solid": "^2.3.0",
+		"vite-plugin-windicss": "^1.8.7",
+		"windicss": "^3.5.6"
 	}
 }
